@@ -3,13 +3,18 @@ const oldTownRoad = require('./oldTownRoad.js');
 const shame = require('./shame.js');
 const taboo = require('./taboo.js');
 const minecraft = require('./minecraft.js');
+const leaf = require('./leaf.js');
 
 const commandArray = [
+	// Every time
 	minecraft,
+	// Blocking
 	shame,
 	taboo,
+	// Non-blocking
 	sixtyNine,
-	oldTownRoad
+	oldTownRoad,
+	leaf
 ];
 
 const run = (state) => {
