@@ -1,10 +1,8 @@
 const run = ({messageText, react}) => {
 	if (messageText.toLowerCase().includes('old town road')) {
 		react('🤠');
-		return true;
-	} else {
-		return false;
 	}
+	return false;
 }
 
 module.exports=run;
