@@ -1,3 +1,5 @@
+2020/04/09
+• Respond appropriately to additional meme number.
 2020/03/31
 • Improved error logging.
 • Fixed bug where users couldn't be shamed.
